# epanet-parse

./: .gitignore  Manifest.in  README.md  build-requirements.txt  pyproject.toml  test-requirements.txt
.github/workflows/: build-wheel.yml
src/epanet/parse/: __init__.py  to_input_file.py
src/epanet/parse/grammars/: input-earley.lark  input-lalr.lark
tests/: test_earley.py  test_lalr.py  test_to_input_file.py
tests/data/: example-project.inp  expected-earley.txt  expected-lalr.txt  expected-output.txt
